--- a/src/plugins/theme/style-setion.css
+++ b/src/plugins/theme/style-setion.css
@@ -1,4 +1,4 @@
-.content{
+.content {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -8,24 +8,27 @@
   width: 98%;
   padding: 10px;
   margin: 1em 0;
-  background:#ffffff;
+  background: #ffffff;
   border-radius: 2px;
   border: none !important;
 }
 
-.simple-box-title, .simple-box-description {
+.simple-box-title,
+.simple-box-description {
   padding: 10px;
   margin: 0;
   width: auto;
-  background: #FFF;
+  background: #fff;
   border: none !important;
   box-shadow: none !important;
 }
-.section:hover,.simple-box:hover,.simple-box:hover>.simple-box-title,.simple-box:hover>.simple-box-description{
-    background: rgb(216, 216, 216) !important;
-    border: 3px solid var(--ck-color-widget-hover-border);;
-    border-radius: 5px;
-    outline-color: var(--ck-color-widget-hover-border);
+.section:hover,
+.simple-box:hover,
+.simple-box:hover > .simple-box-title,
+.simple-box:hover > .simple-box-description {
+  border: 3px solid var(--ck-color-widget-hover-border);
+  border-radius: 5px;
+  outline-color: var(--ck-color-widget-hover-border);
 }
 .simple-box-title {
   margin-bottom: 10px;
@@ -33,10 +36,10 @@
 .ck .ck-widget:hover {
   outline-color: var(--ck-color-widget-hover-border);
 }
-.section{
+.section {
   padding: 10px 20px;
 }
-.Check{
+.Check {
   border: 3px solid #7179af !important;
   border-radius: 5px;
   background: rgb(216, 216, 216);
@@ -44,6 +47,6 @@
 /* .ck-balloon-panel{
   left: 50px !important;
 } */
-.ck-editor{
+.ck-editor {
   width: 700px !important;
 }
