修改边框颜色

--- a/src/plugins/theme/style-setion.css
+++ b/src/plugins/theme/style-setion.css
@@ -40,7 +40,7 @@
   padding: 10px 20px;
 }
 .Check {
-  border: 3px solid #7179af !important;
+  border: 3px solid #409EFF !important;
   border-radius: 5px;
   background: rgb(216, 216, 216);
 }
