修改文本，修改restrict模式没有marker时新增marker的问题；normal模式下。删除掉case，两个marker有会合并的问题

--- a/src/plugins/theme/style-setion.css
+++ b/src/plugins/theme/style-setion.css
@@ -42,7 +42,7 @@
 .Check {
   border: 3px solid #409EFF !important;
   border-radius: 5px;
-  background: rgb(216, 216, 216);
+  /* background: rgb(216, 216, 216); */
 }
 /* .ck-balloon-panel{
   left: 50px !important;
