--- a/src/plugins/tableControls/css/tableWrapper.css
+++ b/src/plugins/tableControls/css/tableWrapper.css
@@ -8,7 +8,7 @@
   display: flex;
   height: 14px;
   flex-direction: row;
-  margin-left: 14px;
+  margin-left: 15px;
   background-color: #f4f5f5;
   border-width: 1px 0 1px 1px;
 }
@@ -27,15 +27,20 @@
 }
 .wrapper-col {
   width: 14px;
-  height: auto;
-  background-color: #f4f5f5;
+  /* height: auto; */
 }
 
 .wrapper-col :not(:last-child) {
   border-bottom: 0px;
 }
 
-.wrapper-col-item {
+/* .wrapper-col-item {
   flex: 1;
+  height: 35.78px;
   border: 1px solid #cccecd;
+  background-color: #f4f5f5;
 }
+.ck-content .table {
+  margin-left: 14px;
+  margin-top: -206px;
+} */
