--- a/src/plugins/theme/style-setion.css
+++ b/src/plugins/theme/style-setion.css
@@ -26,9 +26,11 @@
 .simple-box:hover,
 .simple-box:hover > .simple-box-title,
 .simple-box:hover > .simple-box-description {
-  border: 3px solid var(--ck-color-widget-hover-border);
+  background-color: rgb(227, 228, 226);
   border-radius: 5px;
-  outline-color: var(--ck-color-widget-hover-border);
+  /* border: 3px solid var(--ck-color-widget-hover-border);
+  border-radius: 5px;
+  outline-color: var(--ck-color-widget-hover-border); */
 }
 .simple-box-title {
   margin-bottom: 10px;
@@ -37,12 +39,12 @@
   outline-color: var(--ck-color-widget-hover-border);
 }
 /* .section {
-  padding: 10px 20px;
+  padding: 3px 0px;
 } */
 .Check {
-  border: 3px solid #409EFF !important;
+  box-sizing: border-box;
+  box-shadow: 0 0 0 3px #409EFF !important;
   border-radius: 5px;
-  /* background: rgb(216, 216, 216); */
 }
 /* .ck-balloon-panel{
   left: 50px !important;
